--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,16 @@
 {
-    "name": "Verfon",
-    "short_name": "Verfon",
-    "description": "Página para carregar e visualizar caracteres",
-    "start_url": "/",
-    "display": "standalone",
-    "background_color": "#111111",
-    "theme_color": "#fffadf",
-    "icons": [
-      {
-        "src": "icone.svg",
-        "sizes": "192x192",
-        "type": "image/svg+xml"
+  "name": "Verfon",
+  "short_name": "Verfon",
+  "description": "Página para carregar e visualizar caracteres",
+  "start_url": "index.html",
+  "display": "standalone",
+  "background_color": "#111111",
+  "theme_color": "#fffadf",
+  "icons": [
+    {
+      "src": "icone.png",
+      "type": "image/png",
+      "sizes": "512x512"
       }
-    ]
-  }
-  
+  ]
+}
